--- a/rewards/Cargo.toml
+++ b/rewards/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
-name = "pallet-feeds"
+name = "pallet-rewards"
 version = "0.1.0"
-authors = ["Kumandrain <kumandrian@koompi.com>"]
+authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
 edition = "2021"
 license = "Apache-2.0"
-homepage = "https://koompi.com"
-repository = "https://github.com/kumandra/k-pallets"
-description = "Kumandra pallet for interacting with storage"
+description = "Pallet for issuing rewards to block producers"
 readme = "README.md"
+include = [
+  "/src",
+  "/Cargo.toml",
+  "/README.md",
+]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
@@ -16,16 +19,9 @@ targets = ["x86_64-unknown-linux-gnu"]
 codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
 frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
 frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
-log = { version = "0.4.17", default-features = false }
 scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
-sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
 sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
-sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
-kumandra-core-primitives = { version = "0.1.0", default-features = false, path = "../../k-primitives/core" }
-
-[dev-dependencies]
-serde = "1.0.137"
-sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
+kumandra-runtime-primitives = { version = "0.1.0", default-features = false, path = "../../k-primitives/runtime" }
 
 [features]
 default = ["std"]
@@ -33,11 +29,8 @@ std = [
   "codec/std",
   "frame-support/std",
   "frame-system/std",
-  "log/std",
   "scale-info/std",
-  "sp-core/std",
-  "sp-runtime/std",
   "sp-std/std",
-  "kumandra-core-primitives/std",
+  "kumandra-runtime-primitives/std",
 ]
 try-runtime = ["frame-support/try-runtime"]
