--- a/transaction-fees/Cargo.toml
+++ b/transaction-fees/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
 edition = "2021"
 license = "Apache-2.0"
-homepage = "https://subspace.network"
-repository = "https://github.com/subspace/subspace"
 description = "Pallet for charging and re-distributing transaction fees"
 readme = "README.md"
 include = [
@@ -19,10 +17,10 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
-frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/subspace/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
-frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/subspace/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
+frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
+frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
 scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
-subspace-runtime-primitives = { version = "0.1.0", default-features = false, path = "../subspace-runtime-primitives" }
+kumandra-runtime-primitives = { version = "0.1.0", default-features = false, path = "../../kprimitives/runtime" }
 
 [features]
 default = ["std"]
