--- a/grandpa-finality-verifier/Cargo.toml
+++ b/grandpa-finality-verifier/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Kumandrain <kumandrain@koompi.com>"]
 edition = "2021"
 license = "Apache-2.0"
 homepage = "https://koompi.com"
-repository = "https://github.com/kumandra/k-pallets"
+repository = "https://github.com/kumandra/kpallets"
 description = "Pallet to verify GRANDPA finality proofs for Substrate based chains"
 readme = "README.md"
 
