--- a/object-store/Cargo.toml
+++ b/object-store/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Kumandrian <kumandraian@koompi.com>"]
 edition = "2021"
 license = "Apache-2.0"
 homepage = "https://koompi.com"
-repository = "https://github.com/kumandra/k-pallets"
+repository = "https://github.com/kumandra/kpallets"
 description = "Kumandra pallet for simple objects storage"
 readme = "README.md"
 
@@ -20,7 +20,7 @@ hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 log = { version = "0.4.17", default-features = false }
 scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
 sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
-kumandra-core-primitives = { version = "0.1.0", default-features = false, path = "../primitives/core" }
+kumandra-core-primitives = { version = "0.1.0", default-features = false, path = "../../kprimitives/core" }
 
 [dev-dependencies]
 serde = "1.0.137"
