--- a/runtime-configs/Cargo.toml
+++ b/runtime-configs/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
 edition = "2021"
 license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
 homepage = "https://koompi.com"
-repository = "https://github.com/kumandra/k-pallets"
+repository = "https://github.com/kumandra/kpallets"
 description = "Pallet for tweaking the runtime configs for multiple network"
 include = [
   "/src",
